Bug #134745 --> prevent multiple biff calls from trying to show an animated alert when we are already showing an alert.

Bug #133130 --> fix a race condition that caused the notification icon
to never go away.

r=bhuvan
sr=bienvenu